--- a/client/front-end/src/components/Login-style.css
+++ b/client/front-end/src/components/Login-style.css
@@ -1,79 +1,102 @@
-.login-wrapper {
-    width: 100%;
-    display: flex;
-    height: 500px;
-    justify-content: center;
-    align-items: center;
+* {
+  box-sizing: border-box;
 }
 
 .login-container {
-    display: flex;
-    border: 1px solid black;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
+  display: flex;
+  margin: auto;
+  margin-top: 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+}
+
+
+.github-logo,
+.facebook-logo,
+.google-logo {
+  height: 20px;
+  width: 20px;
+  margin: 15px;
+}
+
+
+
+.social-login div {
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.social-login div:hover {
+  cursor: pointer;
+}
+
+.login-facebook, .login-github, .login-google {
+  background-color: white;
+  color: white;
+  height: 35px;
+  width: 352px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
 }
 
 .login-form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 25px;
+  width: 300px;
 }
 
 .login-form-container input {
-    margin-bottom: 5px;
-    border-radius: 5px;
-    padding-left: 5px;
-    border: 1px solid;
-    
+  margin-bottom: 5px;
+  border-radius: 5px;
+  padding-left: 5px;
+  border: 1px solid;
 }
 
-
 .login-button {
-    margin-top: 10px;
-    width: 100%;
-    height: 30px;
-    border-radius: 5px;
-    border: none;
-    background-color: #29566F;
-    color: white;
+  margin-top: 10px;
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  background-color: #29566f;
+  color: white;
 }
 
 .login-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.login-google, .login-github, .login-facebook {
-   
-}
 
 .social-login {
-    display: flex;
-    flex-direction: column;
-    
+  display: flex;
+  flex-direction: column;
 }
 
 .login-form-container label {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: bold;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: bold;
 }
 .login-form-container input {
-    height: 20px;
-    border: 1px solid grey;
+  height: 30px;
+  border: 1px solid grey;
+  width: 100%;
 }
 
 .login-form {
-    border: 1px solid grey;
-    border-radius: 5px;
-    background-color: white;
-    ;
-    
+  border: 1px solid grey;
+  border-radius: 5px;
+  background-color: white;
 }
 
 .login-button-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
+
+
