--- a/client/front-end/src/components/Navbar/Navbar-style.css
+++ b/client/front-end/src/components/Navbar/Navbar-style.css
@@ -6,6 +6,7 @@ body {
     color: white;
     display: flex;
     justify-content: space-between;
+    padding: 10px;
 
 }
 
@@ -36,7 +37,7 @@ ul {
 }
 
 .nav-button-group button {
-    height: 40%;
+    
     margin-right: 40px;
     color: white;
     background-color: #1A72C3;
@@ -44,6 +45,7 @@ ul {
     border: none;
     width: 100px;
     border-radius: 10px;
+    padding: 7px;
 }
 
 .nav-button-group button:hover {
