--- a/client/front-end/src/components/QuestionCard/QuestionCard-style.css
+++ b/client/front-end/src/components/QuestionCard/QuestionCard-style.css
@@ -1,4 +1,6 @@
-
+p {
+    font-size: 12px;
+}
 .question-card-container {
     width: 800px;
     background-color: black;
@@ -14,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 10px;
 }
 
 .question-card-stats {
@@ -30,6 +33,7 @@
 .question-tags {
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
     width: 100%;
 }
 
@@ -38,6 +42,8 @@
     width: 100%;
     margin-left: 10px;
 }
+
+
 
 .question-tags-container a {
     background-color: grey;
@@ -50,9 +56,6 @@
     cursor: pointer;
 }
 
-.user-info {
-    padding: 10px;
-}
 .user-info img {
     width: 20px;
     height: 20px;
