--- a/client/front-end/src/components/Navbar/Navbar-style.css
+++ b/client/front-end/src/components/Navbar/Navbar-style.css
@@ -7,6 +7,9 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    position: fixed;
+    width: 100%;
+    top: 0;
 
 }
 
