--- a/client/src/components/Comments/Comment-style.css
+++ b/client/src/components/Comments/Comment-style.css
@@ -3,6 +3,8 @@
     width: 100%;
     padding: 5px;
     margin-top: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .comment-body {
@@ -11,9 +13,15 @@
     width: 100%;
     margin-bottom: 10px;
     justify-content: space-between;
+
+}
+
+.comment-body p {
+    text-align: left;
 }
 
 .comment-body-aside a {
+    padding: 10px;
     text-decoration: none;
     color: hsl(206,100%,40%);
 }
@@ -21,5 +29,8 @@
 
 .comment-body-aside  {
     margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
     
