--- a/client/src/components/QuestionView/QuestionView-style.css
+++ b/client/src/components/QuestionView/QuestionView-style.css
@@ -42,10 +42,16 @@
   flex-direction: column;
   align-items: center;
 }
+.question-body-content {
+  width: 800px;
+  display: flex;
+}
 .question-body-content p {
   padding: 10px;
   color: black;
   font-size: 15px;
+  word-break: break-all;
+  text-align: left;
 }
 
 .question-view-tag-child {
