--- a/client/src/components/Comments/Comment-style.css
+++ b/client/src/components/Comments/Comment-style.css
@@ -3,7 +3,6 @@
     width: 100%;
     padding: 5px;
     margin-top: 10px;
-    justify-content: center;
     align-items: center;
 }
 
@@ -13,6 +12,7 @@
     width: 100%;
     margin-bottom: 10px;
     justify-content: space-between;
+    max-width: 800px;
 
 }
 
