--- a/client/src/components/QuestionCard/QuestionCard-style.css
+++ b/client/src/components/QuestionCard/QuestionCard-style.css
@@ -57,8 +57,18 @@ p {
 }
 
 .user-info img {
-    width: 20px;
     height: 20px;
     margin-right: 5px;
 }
 
+@media only screen and (max-width: 600px) {
+    .question-card-container {
+        width: 100%;
+        background-color: black;
+        display: flex;
+        color: white;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        
+    }
+}
