--- a/client/src/components/Comments/Comment-style.css
+++ b/client/src/components/Comments/Comment-style.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     padding: 5px;
-    margin-top: 10px;
+    margin: 10px 50px;
     align-items: center;
     border-bottom: 1px solid #969696;
 }
