change - upvote/down on answers - comments on answers

--- a/client/src/components/QuestionView/QuestionView-style.css
+++ b/client/src/components/QuestionView/QuestionView-style.css
@@ -136,3 +136,14 @@ button:hover {
   display: flex;
   flex-direction: column;
 }
+
+.question-body-bottom {
+
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.question-tags-aside {
+  color: grey;
+}
